# claude-codebase-agent

./: .env.example  .envrc  .gitignore  .mcp.json.example  CLAUDE.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
docs/: api-reference.md  architecture.md  configuration.md  pr-merge-order.md  running.md  user-guide.md
src/claude_codebase_agent/: __init__.py  __main__.py  builder.py  cli.py  explorer.py  prompts.py  session.py
tests/: test_smoke.py
