[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-codebase-agent"
version = "0.1.0"
description = "A Claude Agent SDK tool that explores unfamiliar codebases and implements features from high-level requirements"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
claude-codebase-agent = "claude_codebase_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_codebase_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
